CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_PIN_INFO__c.object
<CustomObject>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Pin Information</relationshipLabel>
        <relationshipName>Individual_Pin_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Login__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Successful Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PIN_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PIN Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin_Reset_Code_Generated_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last PIN Registration/Reset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Last_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Date Last Modified</label>
        <type>DateTime</type>
    </fields>
    <label>PIN Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IPI-{0}</displayFormat>
        <label>Individual Pin Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIN Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>